[workspace]
members = ["crates/*", "python"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
readme = "readme.md"
version = "0.2.0"
authors = ["Xavier Olive <git@xoolive.org>"]

[profile.release]
lto = "thin"
overflow-checks = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true
strip = true

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"
