[package]
name = "thrust-py"
description = "Python binding to trafficrs core functions (Rust version of traffic)"
repository = "https://github.com/xoolive/thrust"
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
exclude = ["__pycache__", "**/__pycache__", "**/__pycache__/**", "*.pyc", "**/*.pyc"]

[lib]
name = "thrust_py"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.44"
numpy = "0.27.1"
pyo3 = "0.27.2"
serde_json = "1"
traffic-thrust = { version = "0.2.1", path = "../crates/thrust" }
