[package]
name = "thrust-wasm"
version = "0.2.0"
edition = "2021"
description = "WASM bindings for traffic-thrust core parsers"
repository = "https://github.com/xoolive/thrust"
license = "MIT"
readme = "readme.md"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
traffic-thrust = { version = "0.2.0", path = "../thrust" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
chrono = "0.4"
quick-xml = "0.38"
zip = "5"
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }
