[package]
name = "traffic-thrust"
version = "0.1.0"
edition = "2021"
authors = ["Xavier Olive <git@xoolive.org>"]

[lib]
name = "thrust"
path = "src/lib.rs"

[dependencies]
geodesy = "0.14.0"
ndarray-linalg = { version = "0.18.0", default-features = false, optional = true }
numpy = { version = "0.27.0", optional = true }
once_cell = "1.21.3"
polars = { version = "0.51.0", features = [
    "lazy",
    "rolling_window",
], optional = true }
quick-xml = "0.38.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"], optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", optional = true }
warp = { version = "0.4.2", features = ["server"], optional = true }
zip = "6.0.0"

[features]
default = []
polars = ["dep:polars", "dep:ndarray-linalg", "dep:numpy"]
rest = ["dep:warp", "dep:tokio", "dep:tracing-subscriber"]

# ndarray-linalg backends
openblas = ["ndarray-linalg/openblas"]
netlib = ["ndarray-linalg/netlib"]

[dev-dependencies]
jiff = "0.2.1"


[[example]]
name = "airport_heliport"
required-features = ["polars"]

[[example]]
name = "designated_point"
required-features = ["polars"]

[[example]]
name = "navaid"
required-features = ["polars"]

[[example]]
name = "route"
required-features = ["polars"]

[[example]]
name = "route_segment"
required-features = ["polars"]

[[example]]
name = "field15_serve"
required-features = ["rest"]
